added footer html

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -7,146 +7,162 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="awesome">
-      <div class="container">
-        <h2 class="awesome__title title">Why this is awesome</h2>
-        <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-        <div class="awesome__cards-container">
-          <div class="awesome__card">
-            <div class="awesome__card-icon">
-              <img src="img/icons/lightbulb.png" alt="Electric lightbulub" class="awesome__card-icon-img" />
-            </div>
-            <h4 class="awesome__card-title">Thoughtful Design</h4>
-            <p class="awesome__card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
-              dolor sit amet lacus accumsan et viverra.
-            </p>
-          </div>
-          <div class="awesome__card">
-            <div class="awesome__card-icon">
-              <img src="img/icons/keyboard.png" alt="Computer keyboard" class="awesome__card-icon-img" />
-            </div>
-            <h4 class="awesome__card-title">Well Crafted</h4>
-            <p class="awesome__card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
-              dolor sit amet lacus accumsan et viverra.
-            </p>
-          </div>
-          <div class="awesome__card">
-            <div class="awesome__card-icon">
-              <img src="img/icons/lightning.png" alt="Lightning bolt" class="awesome__card-icon-img" />
-            </div>
-            <h4 class="awesome__card-title">Easy to Customize</h4>
-            <p class="awesome__card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
-              dolor sit amet lacus accumsan et viverra.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="pricing">
-      <div class="container">
-        <h2 class="pricing__title title">Pricing options</h2>
-        <h3 class="pricing__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        <div class="pricing__plans-container">
-          <ul class="pricing__plan">
-            <li class="pricing__plan-title">Basic</li>
-            <li class="pricing__plan-price">
-              <span class="pricing__currency">$</span><span class="pricing__price">10</span>
-            </li>
-            <li class="pricing__plan-subtitle">Free for life</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-          </ul>
-          <ul class="pricing__plan">
-            <li class="pricing__plan-title">Optima</li>
-            <li class="pricing__plan-price">
-              <span class="pricing__currency">$</span><span class="pricing__price">20</span>
-            </li>
-            <li class="pricing__plan-subtitle pricing__plan-subtitle_highlighted">Free for life</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-          </ul>
-          <ul class="pricing__plan">
-            <li class="pricing__plan-title">Pro</li>
-            <li class="pricing__plan-price">
-              <span class="pricing__currency">$</span><span class="pricing__price">30</span>
-            </li>
-            <li class="pricing__plan-subtitle">Free for life</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-            <li class="pricing__plan-item">1 gb of space</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section class="customers">
-      <div class="container">
-        <h2 class="customers__title title">what our customers are saying</h2>
-        <h3 class="customers__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-        <div class="customers__cards-container">
-          <div class="customers__card">
-            <p class="customers__card-testimonial">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit molestias ad velit veritatis aperiam.
-              Architecto fuga quos blanditiis accusamus doloremque tempore nisi. Earum eaque, esse temporibus tempore
-              provident dolor quos sequi voluptatum quibusdam ipsa est aliquid eveniet nulla aperiam quam?
-            </p>
-            <div class="customers__card-customerinfo">
-              <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
-              <div class="customers__card-credentials">
-                <h4 class="customers__card-name">Jeremy H.</h4>
-                <h5 class="customers__card-position">Manager</h5>
+    <header class="header"></header>
+    <main>
+      <section class="awesome">
+        <div class="container">
+          <h2 class="awesome__title title">Why this is awesome</h2>
+          <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+          <div class="awesome__cards-container">
+            <div class="awesome__card">
+              <div class="awesome__card-icon">
+                <img src="img/icons/lightbulb.png" alt="Electric lightbulub" class="awesome__card-icon-img" />
               </div>
+              <h4 class="awesome__card-title">Thoughtful Design</h4>
+              <p class="awesome__card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra.
+              </p>
             </div>
-          </div>
-          <div class="customers__card">
-            <p class="customers__card-testimonial">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique
-              odio aspernatur ex, architecto eaque quo suscipit.
-            </p>
-            <div class="customers__card-customerinfo">
-              <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
-              <div class="customers__card-credentials">
-                <h4 class="customers__card-name">Jeremy H.</h4>
-                <h5 class="customers__card-position">Manager</h5>
+            <div class="awesome__card">
+              <div class="awesome__card-icon">
+                <img src="img/icons/keyboard.png" alt="Computer keyboard" class="awesome__card-icon-img" />
               </div>
+              <h4 class="awesome__card-title">Well Crafted</h4>
+              <p class="awesome__card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra.
+              </p>
             </div>
-          </div>
-          <div class="customers__card">
-            <p class="customers__card-testimonial">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, aliquam.
-            </p>
-            <div class="customers__card-customerinfo">
-              <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
-              <div class="customers__card-credentials">
-                <h4 class="customers__card-name">Jeremy H.</h4>
-                <h5 class="customers__card-position">Manager</h5>
+            <div class="awesome__card">
+              <div class="awesome__card-icon">
+                <img src="img/icons/lightning.png" alt="Lightning bolt" class="awesome__card-icon-img" />
               </div>
+              <h4 class="awesome__card-title">Easy to Customize</h4>
+              <p class="awesome__card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra.
+              </p>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="axure">
-      <div class="container axure__container">
-        <h2 class="axure__title title">Stylish Axure design</h2>
-        <h3 class="axure__subtitle">
-          Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
-        </h3>
-        <a href="#" class="axure__button">Download</a>
-      </div>
-    </section>
+      </section>
+      <section class="pricing">
+        <div class="container">
+          <h2 class="pricing__title title">Pricing options</h2>
+          <h3 class="pricing__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <div class="pricing__plans-container">
+            <ul class="pricing__plan">
+              <li class="pricing__plan-title">Basic</li>
+              <li class="pricing__plan-price">
+                <span class="pricing__currency">$</span><span class="pricing__price">10</span>
+              </li>
+              <li class="pricing__plan-subtitle">Free for life</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+            </ul>
+            <ul class="pricing__plan">
+              <li class="pricing__plan-title">Optima</li>
+              <li class="pricing__plan-price">
+                <span class="pricing__currency">$</span><span class="pricing__price">20</span>
+              </li>
+              <li class="pricing__plan-subtitle pricing__plan-subtitle_highlighted">Free for life</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+            </ul>
+            <ul class="pricing__plan">
+              <li class="pricing__plan-title">Pro</li>
+              <li class="pricing__plan-price">
+                <span class="pricing__currency">$</span><span class="pricing__price">30</span>
+              </li>
+              <li class="pricing__plan-subtitle">Free for life</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+              <li class="pricing__plan-item">1 gb of space</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="customers">
+        <div class="container">
+          <h2 class="customers__title title">what our customers are saying</h2>
+          <h3 class="customers__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+          <div class="customers__cards-container">
+            <div class="customers__card">
+              <p class="customers__card-testimonial">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit molestias ad velit veritatis aperiam.
+                Architecto fuga quos blanditiis accusamus doloremque tempore nisi. Earum eaque, esse temporibus tempore
+                provident dolor quos sequi voluptatum quibusdam ipsa est aliquid eveniet nulla aperiam quam?
+              </p>
+              <div class="customers__card-customerinfo">
+                <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
+                <div class="customers__card-credentials">
+                  <h4 class="customers__card-name">Jeremy H.</h4>
+                  <h5 class="customers__card-position">Manager</h5>
+                </div>
+              </div>
+            </div>
+            <div class="customers__card">
+              <p class="customers__card-testimonial">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
+                similique odio aspernatur ex, architecto eaque quo suscipit.
+              </p>
+              <div class="customers__card-customerinfo">
+                <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
+                <div class="customers__card-credentials">
+                  <h4 class="customers__card-name">Jeremy H.</h4>
+                  <h5 class="customers__card-position">Manager</h5>
+                </div>
+              </div>
+            </div>
+            <div class="customers__card">
+              <p class="customers__card-testimonial">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, aliquam.
+              </p>
+              <div class="customers__card-customerinfo">
+                <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
+                <div class="customers__card-credentials">
+                  <h4 class="customers__card-name">Jeremy H.</h4>
+                  <h5 class="customers__card-position">Manager</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="axure">
+        <div class="container axure__container">
+          <h2 class="axure__title title">Stylish Axure design</h2>
+          <h3 class="axure__subtitle">
+            Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
+          </h3>
+          <a href="#" class="axure__button">Download</a>
+        </div>
+      </section>
+      <section class="social"></section>
+    </main>
+    <footer class="footer">
+      <ul class="footer-social-icons">
+        <li class="fab"></li>
+        <li class="fab"></li>
+        <li class="fab"></li>
+        <li class="fab"></li>
+        <li class="fab"></li>
+        <li class="fab"></li>
+        <li class="fab"></li>
+      </ul>
+      <p class="footer-copyright">© 2015 Axure Themes</p>
+    </footer>
   </body>
 </html>
