added styles for the footer

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -153,14 +153,14 @@
       <section class="social"></section>
     </main>
     <footer class="footer">
-      <ul class="footer-social-icons">
-        <li class="fab"></li>
-        <li class="fab"></li>
-        <li class="fab"></li>
-        <li class="fab"></li>
-        <li class="fab"></li>
-        <li class="fab"></li>
-        <li class="fab"></li>
+      <ul class="footer-social">
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-facebook-f"></a></li>
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-twitter"></a></li>
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-google-plus-g"></a></li>
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-pinterest"></a></li>
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-instagram"></a></li>
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-stumbleupon"></a></li>
+        <li class="footer-social__item"><a href="#" class="footer-social__icon fas fa-rss"></a></li>
       </ul>
       <p class="footer-copyright">© 2015 Axure Themes</p>
     </footer>
