added Social Media HTML

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -9,6 +9,25 @@
   <body>
     <header class="header"></header>
     <main>
+      <section class="social">
+        <div class="container social-container">
+          <div class="social-description">
+            <h2 class="social-description__title">Social Media</h2>
+            <p class="social-description__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+            </p>
+          </div>
+          <ul class="social-icons">
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fab fa-facebook-f"></a></li>
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fab fa-twitter"></a></li>
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fab fa-google-plus-g"></a></li>
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fab fa-pinterest"></a></li>
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fab fa-instagram"></a></li>
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fab fa-stumbleupon"></a></li>
+            <li class="social-icons__item"><a href="#" class="social-icons__icon fas fa-rss"></a></li>
+          </ul>
+        </div>
+      </section>
       <section class="awesome">
         <div class="container">
           <h2 class="awesome__title title">Why this is awesome</h2>
@@ -150,7 +169,6 @@
           <a href="#" class="axure__button">Download</a>
         </div>
       </section>
-      <section class="social"></section>
     </main>
     <footer class="footer">
       <ul class="footer-social">
