added styles for the social section

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -120,9 +120,8 @@
           <div class="customers__cards-container">
             <div class="customers__card">
               <p class="customers__card-testimonial">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit molestias ad velit veritatis aperiam.
-                Architecto fuga quos blanditiis accusamus doloremque tempore nisi. Earum eaque, esse temporibus tempore
-                provident dolor quos sequi voluptatum quibusdam ipsa est aliquid eveniet nulla aperiam quam?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
+                similique odio aspernatur ex, architecto eaque quo suscipit.
               </p>
               <div class="customers__card-customerinfo">
                 <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
@@ -147,7 +146,8 @@
             </div>
             <div class="customers__card">
               <p class="customers__card-testimonial">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, aliquam.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
+                similique odio aspernatur ex, architecto eaque quo suscipit.
               </p>
               <div class="customers__card-customerinfo">
                 <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
@@ -180,7 +180,7 @@
         <li class="footer-social__item"><a href="#" class="footer-social__icon fab fa-stumbleupon"></a></li>
         <li class="footer-social__item"><a href="#" class="footer-social__icon fas fa-rss"></a></li>
       </ul>
-      <p class="footer-copyright">© 2015 Axure Themes</p>
+      <p class="footer-copyright">&copy; 2015 Axure Themes</p>
     </footer>
   </body>
 </html>
