customers testimonials are always the same height

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -120,8 +120,9 @@
           <div class="customers__cards-container">
             <div class="customers__card">
               <p class="customers__card-testimonial">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
-                similique odio aspernatur ex, architecto eaque quo suscipit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut molestias odit reprehenderit.
+                Aliquam, earum quo! Corporis autem iste tenetur consequatur atque odio, dolorum vitae quod deleniti
+                illum praesentium blanditiis.
               </p>
               <div class="customers__card-customerinfo">
                 <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
@@ -146,8 +147,7 @@
             </div>
             <div class="customers__card">
               <p class="customers__card-testimonial">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat
-                similique odio aspernatur ex, architecto eaque quo suscipit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, velit.
               </p>
               <div class="customers__card-customerinfo">
                 <img src="img/photos/jeremy_h.png" alt="Jeremy H. photo" class="customers__card-photo" />
