--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="container">
+        <div class="header-logo">AX<span class="header-logo__highlighted">IT</span></div>
+        <nav class="header-navigation">
+          <ul class="header-navigation__menu">
+            <li class="header-navigation__menu-item">Features</li>
+            <li class="header-navigation__menu-item">About</li>
+            <li class="header-navigation__menu-item">Pricing</li>
+            <li class="header-navigation__menu-item">Reviews</li>
+            <li class="header-navigation__menu-item">Contact</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
       <section class="social">
         <div class="container social-container">
