--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <div class="header-logo">AX<span class="header-logo__highlighted">IT</span></div>
         <nav class="header-navigation">
           <ul class="header-navigation__menu">
-            <li class="header-navigation__menu-item">Features</li>
-            <li class="header-navigation__menu-item">About</li>
-            <li class="header-navigation__menu-item">Pricing</li>
-            <li class="header-navigation__menu-item">Reviews</li>
-            <li class="header-navigation__menu-item">Contact</li>
+            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Features</a></li>
+            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">About</a></li>
+            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Pricing</a></li>
+            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Reviews</a></li>
+            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Contact</a></li>
           </ul>
         </nav>
       </div>
