renamed header to navigation

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -7,20 +7,18 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container header-container">
-        <div class="header-logo">AX<span class="header-logo__highlighted">IT</span></div>
-        <nav class="header-navigation">
-          <ul class="header-navigation__menu">
-            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Features</a></li>
-            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">About</a></li>
-            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Pricing</a></li>
-            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Reviews</a></li>
-            <li class="header-navigation__menu-item"><a href="#" class="header-navigation__link">Contact</a></li>
-          </ul>
-        </nav>
+    <nav class="navigation">
+      <div class="container navigation-container">
+        <div class="navigation-logo">AX<span class="navigation-logo__highlighted">IT</span></div>
+        <ul class="navigation__menu">
+          <li class="navigation__menu-item"><a href="#" class="navigation__link">Features</a></li>
+          <li class="navigation__menu-item"><a href="#" class="navigation__link">About</a></li>
+          <li class="navigation__menu-item"><a href="#" class="navigation__link">Pricing</a></li>
+          <li class="navigation__menu-item"><a href="#" class="navigation__link">Reviews</a></li>
+          <li class="navigation__menu-item"><a href="#" class="navigation__link">Contact</a></li>
+        </ul>
       </div>
-    </header>
+    </nav>
     <main>
       <section class="social">
         <div class="container social-container">
