--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -19,6 +19,28 @@
         </ul>
       </div>
     </nav>
+    <header class="header">
+      <div class="container">
+        <div class="header__text">
+          <div class="header-logo">AX<span class="header-logo__highlighted">IT</span></div>
+          <h1 class="header__title title">Modern Axure template for beautiful prototypes</h1>
+          <h3 class="header__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</h3>
+          <a href="#" class="header__button">Download</a>
+        </div>
+        <form action="#" method="POST" class="header-form">
+          <h4 class="header-form__title">
+            Try your <span class="header-form__title-highlighted">free</span> trial today
+          </h4>
+          <label for="header.form.name" class="header-form__label">Name</label>
+          <input type="text" id="header.form.name" class="header-form__input" />
+          <label for="header.form.email" class="header-form__label">Email</label>
+          <input type="email" id="header.form.email" class="header-form__input" />
+          <label for="header.form.password" class="header-form__label">Password</label>
+          <input type="password" id="header.form.password" class="header-form__input" />
+          <button class="header-form__button" type="Submit">Get started</button>
+        </form>
+      </div>
+    </header>
     <main>
       <section class="social">
         <div class="container social-container">
