--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -204,6 +204,27 @@
           <a href="#" class="axure__button download-button">Download</a>
         </div>
       </section>
+      <section class="contact">
+        <div class="container">
+          <h2 class="contact__title title">Contact us</h2>
+          <h3 class="contact__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <form action="#" method="POST" class="contact-form">
+            <div class="contact-form__block">
+              <label for="contact.form.name" class="contact-form__label">Name</label>
+              <input type="text" id="contact.form.name" class="contact-form__input" />
+              <label for="contact.form.email" class="contact-form__label">Email</label>
+              <input type="email" id="contact.form.email" class="contact-form__input" />
+              <label for="contact.form.password" class="contact-form__label">Password</label>
+              <input type="password" id="contact.form.password" class="contact-form__input" />
+            </div>
+            <div class="contact-form__block">
+              <label for="contact.form.message" class="contact-form__label">Message</label>
+              <textarea id="contact.form.message" class="contact-form__input"></textarea>
+            </div>
+            <button class="contact-form__button" type="submit">Send message</button>
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <ul class="footer-social">
