--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -39,7 +39,7 @@
             <label for="header.form.password" class="header-form__label">Password</label>
             <input type="password" id="header.form.password" class="header-form__input" />
           </div>
-          <button class="header-form__button" type="Submit">Get started</button>
+          <button class="form-button header-form__button" type="Submit">Get started</button>
         </form>
       </div>
     </header>
@@ -209,19 +209,21 @@
           <h2 class="contact__title title">Contact us</h2>
           <h3 class="contact__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
           <form action="#" method="POST" class="contact-form">
-            <div class="contact-form__block">
-              <label for="contact.form.name" class="contact-form__label">Name</label>
-              <input type="text" id="contact.form.name" class="contact-form__input" />
-              <label for="contact.form.email" class="contact-form__label">Email</label>
-              <input type="email" id="contact.form.email" class="contact-form__input" />
-              <label for="contact.form.password" class="contact-form__label">Password</label>
-              <input type="password" id="contact.form.password" class="contact-form__input" />
+            <div class="contact-form__container">
+              <div class="contact-form__block">
+                <label for="contact.form.name" class="contact-form__label">Name</label>
+                <input type="text" id="contact.form.name" class="contact-form__input" />
+                <label for="contact.form.email" class="contact-form__label">Email</label>
+                <input type="email" id="contact.form.email" class="contact-form__input" />
+                <label for="contact.form.password" class="contact-form__label">Password</label>
+                <input type="password" id="contact.form.password" class="contact-form__input" />
+              </div>
+              <div class="contact-form__block">
+                <label for="contact.form.message" class="contact-form__label">Message</label>
+                <textarea id="contact.form.message" class="contact-form__input contact-form__input_growing"></textarea>
+              </div>
             </div>
-            <div class="contact-form__block">
-              <label for="contact.form.message" class="contact-form__label">Message</label>
-              <textarea id="contact.form.message" class="contact-form__input"></textarea>
-            </div>
-            <button class="contact-form__button" type="submit">Send message</button>
+            <button class="form-button contact-form__button" type="submit">Send message</button>
           </form>
         </div>
       </section>
