added html for the features section

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -63,6 +63,30 @@
           </ul>
         </div>
       </section>
+      <section class="features">
+        <div class="container features-container">
+          <ul class="features__tabs">
+            <li class="features__tab">Tab 1</li>
+            <li class="features__tab">Tab 1</li>
+            <li class="features__tab">Tab 1</li>
+          </ul>
+          <div class="features__content">
+            <h2 class="features__title">Tabs with soft transitioning effect.</h2>
+            <p class="features__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+              dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+              penatibus et magnis dis parturient montes.
+            </p>
+            <p class="features__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+            </p>
+            <a href="#" class="features_button">Download</a>
+          </div>
+          <div class="features__image-container">
+            <img src="img/illustrations/city_skyline.png" alt="City skyline with scyscrapers" class="features__image" />
+          </div>
+        </div>
+      </section>
       <section class="awesome">
         <div class="container">
           <h2 class="awesome__title title">Why this is awesome</h2>
