added styles for the features section

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -25,7 +25,7 @@
           <div class="header-logo">AX<span class="header-logo__highlighted">IT</span></div>
           <h1 class="header__title title">Modern Axure template for beautiful prototypes</h1>
           <h3 class="header__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</h3>
-          <a href="#" class="header__text-button download-button">Download</a>
+          <a href="#" class="button button_color_transparent header__text-button">Download</a>
         </div>
         <form action="#" method="POST" class="header-form">
           <div class="header-form__container">
@@ -39,7 +39,7 @@
             <label for="header.form.password" class="header-form__label">Password</label>
             <input type="password" id="header.form.password" class="header-form__input" />
           </div>
-          <button class="form-button header-form__button" type="Submit">Get started</button>
+          <button class="button button_color_pink header-form__button" type="Submit">Get started</button>
         </form>
       </div>
     </header>
@@ -64,26 +64,34 @@
         </div>
       </section>
       <section class="features">
-        <div class="container features-container">
-          <ul class="features__tabs">
-            <li class="features__tab">Tab 1</li>
-            <li class="features__tab">Tab 1</li>
-            <li class="features__tab">Tab 1</li>
-          </ul>
-          <div class="features__content">
-            <h2 class="features__title">Tabs with soft transitioning effect.</h2>
-            <p class="features__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
-              dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-              penatibus et magnis dis parturient montes.
-            </p>
-            <p class="features__text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-            </p>
-            <a href="#" class="features_button">Download</a>
-          </div>
-          <div class="features__image-container">
-            <img src="img/illustrations/city_skyline.png" alt="City skyline with scyscrapers" class="features__image" />
+        <div class="container">
+          <div class="features-container">
+            <ul class="features__tabs">
+              <li class="features__tab">Tab 1</li>
+              <li class="features__tab">Tab 1</li>
+              <li class="features__tab">Tab 1</li>
+            </ul>
+            <div class="features__content">
+              <h2 class="features__title">Tabs with soft transitioning effect.</h2>
+              <div class="features__text">
+                <p class="features__paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
+                  gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum
+                  sociis natoque penatibus et magnis dis parturient montes.
+                </p>
+                <p class="features__paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                </p>
+              </div>
+              <a href="#" class="button button_color_pink features_button">Download</a>
+            </div>
+            <div class="features__image-container">
+              <img
+                src="img/illustrations/city_skyline.png"
+                alt="City skyline with scyscrapers"
+                class="features__image"
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -225,7 +233,7 @@
           <h3 class="axure__subtitle">
             Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
           </h3>
-          <a href="#" class="axure__button download-button">Download</a>
+          <a href="#" class="button button_color_transparent axure__button">Download</a>
         </div>
       </section>
       <section class="contact">
@@ -247,7 +255,7 @@
                 <textarea id="contact.form.message" class="contact-form__input contact-form__input_growing"></textarea>
               </div>
             </div>
-            <button class="form-button contact-form__button" type="submit">Send message</button>
+            <button class="button button_color_pink contact-form__button" type="submit">Send message</button>
           </form>
         </div>
       </section>
