added adaptive for everything except features

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -72,7 +72,7 @@
         </section>
       </header>
       <main>
-        <section class="features">
+        <!-- <section class="features">
           <div class="container">
             <div class="features-container">
               <ul class="features__tabs">
@@ -152,7 +152,7 @@
               </ul>
             </div>
           </div>
-        </section>
+        </section> -->
         <section class="awesome">
           <div class="container">
             <h2 class="awesome__title title">Why this is awesome</h2>
