rolled back features to non-functional tabs

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -72,87 +72,38 @@
         </section>
       </header>
       <main>
-        <!-- <section class="features">
+        <section class="features">
           <div class="container">
             <div class="features-container">
               <ul class="features__tabs">
-                <li class="features__tabs-item">
-                  <input
-                    type="radio"
-                    name="features__radio"
-                    id="features.tab1.radio"
-                    class="features__tab-radio"
-                    checked
-                  />
-                  <label for="features.tab1.radio" class="features__tab">Tab 1</label>
-                  <div class="features__tab-content">
-                    <div class="features__content">
-                      <h2 class="features__title">Tabs with soft transitioning effect.</h2>
-                      <div class="features__text">
-                        <p class="features__paragraph">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-                          Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar
-                          tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
-                        </p>
-                        <p class="features__paragraph">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
-                        </p>
-                      </div>
-                      <a href="#" class="button button_color_pink features_button">Download</a>
-                    </div>
-                    <div class="features__image-container">
-                      <img
-                        src="img/illustrations/city_skyline.png"
-                        alt="City skyline with scyscrapers"
-                        class="features__image"
-                      />
-                    </div>
-                  </div>
-                </li>
-                <li class="features__tabs-item">
-                  <input type="radio" name="features__radio" id="features.tab2.radio" class="features__tab-radio" />
-                  <label for="features.tab2.radio" class="features__tab">Tab 2</label>
-                  <div class="features__tab-content">
-                    <div class="features__content">
-                      <h2 class="features__title">This is tab 2</h2>
-                      <div class="features__text">
-                        <p class="features__paragraph">Tab 2 content</p>
-                      </div>
-                      <a href="#" class="button button_color_pink features_button">Download</a>
-                    </div>
-                    <div class="features__image-container">
-                      <img
-                        src="img/illustrations/city_skyline.png"
-                        alt="City skyline with scyscrapers"
-                        class="features__image features__image_rotate_90"
-                      />
-                    </div>
-                  </div>
-                </li>
-                <li class="features__tabs-item">
-                  <input type="radio" name="features__radio" id="features.tab3.radio" class="features__tab-radio" />
-                  <label for="features.tab3.radio" class="features__tab">Tab 3</label>
-                  <div class="features__tab-content">
-                    <div class="features__content">
-                      <h2 class="features__title">This is tab 3</h2>
-                      <div class="features__text">
-                        <p class="features__paragraph">Tab 3 content</p>
-                      </div>
-                      <a href="#" class="button button_color_pink features_button">Download</a>
-                    </div>
-                    <div class="features__image-container">
-                      <img
-                        src="img/illustrations/city_skyline.png"
-                        alt="City skyline with scyscrapers"
-                        class="features__image features__image_rotate_180"
-                      />
-                    </div>
-                  </div>
-                </li>
+                <li class="features__tab">Tab 1</li>
+                <li class="features__tab">Tab 1</li>
+                <li class="features__tab">Tab 1</li>
               </ul>
+              <div class="features__content">
+                <h2 class="features__title">Tabs with soft transitioning effect.</h2>
+                <div class="features__text">
+                  <p class="features__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
+                    gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum
+                    sociis natoque penatibus et magnis dis parturient montes.
+                  </p>
+                  <p class="features__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                  </p>
+                </div>
+                <a href="#" class="button button_color_pink features_button">Download</a>
+              </div>
+              <div class="features__image-container">
+                <img
+                  src="img/illustrations/city_skyline.png"
+                  alt="City skyline with scyscrapers"
+                  class="features__image"
+                />
+              </div>
             </div>
           </div>
-        </section> -->
+        </section>
         <section class="awesome">
           <div class="container">
             <h2 class="awesome__title title">Why this is awesome</h2>
