added functional links

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -14,11 +14,11 @@
             <div class="navigation-container">
               <div class="navigation-logo">AX<span class="navigation-logo__highlighted">IT</span></div>
               <ul class="navigation__menu">
-                <li class="navigation__menu-item"><a href="#" class="navigation__link">Features</a></li>
-                <li class="navigation__menu-item"><a href="#" class="navigation__link">About</a></li>
-                <li class="navigation__menu-item"><a href="#" class="navigation__link">Pricing</a></li>
-                <li class="navigation__menu-item"><a href="#" class="navigation__link">Reviews</a></li>
-                <li class="navigation__menu-item"><a href="#" class="navigation__link">Contact</a></li>
+                <li class="navigation__menu-item"><a href="#features" class="navigation__link">Features</a></li>
+                <li class="navigation__menu-item"><a href="#about" class="navigation__link">About</a></li>
+                <li class="navigation__menu-item"><a href="#pricing" class="navigation__link">Pricing</a></li>
+                <li class="navigation__menu-item"><a href="#reviews" class="navigation__link">Reviews</a></li>
+                <li class="navigation__menu-item"><a href="#contact" class="navigation__link">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -73,6 +73,7 @@
       </header>
       <main>
         <section class="features">
+          <a id="features"></a>
           <div class="container">
             <div class="features-container">
               <ul class="features__tabs">
@@ -105,6 +106,7 @@
           </div>
         </section>
         <section class="awesome">
+          <a id="about"></a>
           <div class="container">
             <h2 class="awesome__title title">Why this is awesome</h2>
             <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
@@ -143,6 +145,7 @@
           </div>
         </section>
         <section class="pricing">
+          <a id="pricing"></a>
           <div class="container">
             <h2 class="pricing__title title">Pricing options</h2>
             <h3 class="pricing__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -190,6 +193,7 @@
           </div>
         </section>
         <section class="customers">
+          <a id="reviews"></a>
           <div class="container">
             <h2 class="customers__title title">what our customers are saying</h2>
             <h3 class="customers__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
@@ -248,6 +252,7 @@
           </div>
         </section>
         <section class="contact">
+          <a id="contact"></a>
           <div class="container">
             <h2 class="contact__title title">Contact us</h2>
             <h3 class="contact__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
